# zubale-ml-test

./: .gitattributes  .gitignore  Dockerfile  README.md  README_FOR_CANDIDATES.md  design_gcp.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  hello_word.yml
artifacts/: action_plan.json  agent_plan.json  agent_plan.yaml  drift_report.json  feature_importances.csv  feature_pipeline.pkl  metrics.json  model.pkl
data/: churn_ref_sample.csv  churn_shifted_sample.csv  customer_churn_synth.csv  drift_latest.json  metrics_history.jsonl
docker/: Dockerfile
notebooks/: eda.ipynb
src/: agent_monitor.py  agent_tools.py  app.py  drift.py  features.py  io_schemas.py  metrics.py  models.py  train.py
tests/: sample.json  test_inference.py  test_training.py
