[tool.poetry]
name = "churn-model"
version = "0.1.0"
description = "Train, Serve and Monitor Predictive Models for Customer churn"
authors = ["santiagoahl <santiago.ahumada.1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
xgboost = "^3.0.4"
lightgbm = "^4.6.0"
shap = "^0.48.0"
matplotlib = "^3.10.5"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"