[tool.poetry]
name = "churn-model"
version = "0.1.0"
description = "Train, Serve and Monitor Predictive Models for Customer churn"
authors = ["santiagoahl <santiago.ahumada.1@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
black = "^25.1.0"
pandas = "^2.3.2"
scikit-learn = "^1.7.1"
xgboost = "^3.0.4"
lightgbm = "^4.6.0"
shap = "^0.48.0"
matplotlib = "^3.10.5"
pytest = "^8.4.1"
fastapi = "^0.116.1"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
